@@ -1018,6 +1018,7 @@ static SCIP_DECL_HEUREXEC(heurExecPADM)
    SCIP_Bool istimeleft;
    SCIP_Bool success;
    SCIP_Bool avoidmemout;
+   SCIP_Bool disablemeasures;
    int maxgraphedge;
    int ndecomps;
    int nconss;
@@ -1141,11 +1142,16 @@ static SCIP_DECL_HEUREXEC(heurExecPADM)
       goto TERMINATE;
    }
 
-   /* we do not need the block decomposition graph of the statistics */
+   /* we do not need the block decomposition graph and expensive measures of the decomposition statistics */
    SCIP_CALL( SCIPgetIntParam(scip, "decomposition/maxgraphedge", &maxgraphedge) );
    if( !SCIPisParamFixed(scip, "decomposition/maxgraphedge") )
    {
       SCIP_CALL( SCIPsetIntParam(scip, "decomposition/maxgraphedge", 0) );
+   }
+   SCIP_CALL( SCIPgetBoolParam(scip, "decomposition/disablemeasures", &disablemeasures) );
+   if( !SCIPisParamFixed(scip, "decomposition/disablemeasures") )
+   {
+      SCIP_CALL( SCIPsetBoolParam(scip, "decomposition/disablemeasures", TRUE) );
    }
 
    /* don't change problem by sorting constraints */
@@ -1184,8 +1190,9 @@ static SCIP_DECL_HEUREXEC(heurExecPADM)
       nblocks = SCIPdecompGetNBlocks(decomp);
    }
 
-   /* reset parameter */
+   /* reset parameters */
    SCIP_CALL( SCIPsetIntParam(scip, "decomposition/maxgraphedge", maxgraphedge) );
+   SCIP_CALL( SCIPsetBoolParam(scip, "decomposition/disablemeasures", disablemeasures) );
 
    /* @note the terms 'linking' and 'border' (constraints/variables) are used interchangeably */
 
